--- a/CMAKELists.txt
+++ b/CMAKELists.txt
@@ -1,23 +1,7 @@
-# Almost all CMake files should start with this
-# You should always specify a range with the newest
-# and oldest tested versions of CMake. This will ensure
-# you pick up the best policies.
-cmake_minimum_required(VERSION 3.15...3.30)
+cmake_minimum_required(VERSION 3.5.0)
+project(CPP-JSON VERSION 0.1.0 LANGUAGES C CXX)
 
-# This is your project statement. You should always list languages;
-# Listing the version is nice here since it sets lots of useful variables
-project(
-  CppJSONparser 
-  VERSION 0.0.1
-  LANGUAGES CXX)
+include_directories(./src)
+add_executable(json_main ./main/main.cpp)
 
-add_library(CppJSONlib JSON.cpp JSON.hpp)
 
-# Link each target with other targets or add options, etc.
-
-# Adding something we can run - Output name matches target name
-add_executable(Test test/main.cpp)
-
-# Make sure you link your targets with this command. It can also link libraries and
-# even flags, so linking a target that does not exist will not give a configure-time error.
-target_link_libraries(Test PRIVATE CppJSONlib)
