--- a/CMAKELists.txt
+++ b/CMAKELists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(CPP-JSON VERSION 0.1.0 LANGUAGES C CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 include_directories(./lib_src)
 add_executable(json_main ./main/main.cpp)
 
