--- a/CMAKELists.txt
+++ b/CMAKELists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 include_directories(./lib_src)
-add_executable(json_main ./main/main.cpp)
+add_executable(json_main ./main/main.cpp ./lib_src/JSON.cpp)
 
 
